--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "择高而立，向宽处行。"
 ---
 
 {% for post in paginator.posts %}
